feat: :sparkles: Enlace a paginas

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h1 style="color: lightskyblue; text-align: center;">MAPA POLITICO DE COLOMBIA</h1>
-    <img src="images/img01.jpg" alt="Mapa de Colombia" style="width: 600px; height: auto;">
+    <center>
+    <img src="images/img01.jpg" alt="Mapa de Colombia" usemap="#colombia-map">
+    </center>
+    <map name="colombia-map">>
+        <area target="_blank" alt="Mapa de Colombia" title="casanare" href="./casanare.html" coords="264,256,272,234,349,229,347,246,310,276,269,290,246,277" shape="poly">
+        <area target="_blank" alt="Mapa de Colombia" title="Meta" href="./meta.html" coords="183,340,205,304,228,290,242,296,273,291,313,277,314,340,283,344,252,357,226,364,228,388,207,385,188,374" shape="poly">
+        <area target="_blank" alt="Mapa de Colombia" title="Santander" href="./santander.html" coords="197,225,212,206,216,193,223,177,237,181,252,194,263,204,261,219,246,239,225,228,224,243,214,241,204,236" shape="poly">
+    </map>
 </body>
 </html>
