feat: :sparkles: Departamento Santander

--- a/santander.html
+++ b/santander.html
@@ -3,9 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Santander</title>
 </head>
 <body>
-    
+    <h1 style="text-align: center;">Bienvenido a Santander</h1>
+    <center>
+        <img src="images/Santander.jpeg" alt="Santander" width="40%" height="40%">
+    </center>
+    <h2>Descripcion</h2>
+    <p style="text-align: justify;">Santander es un departamento ubicado en la región andina de Colombia. 
+    Su capital es Bucaramanga, conocida como la "Ciudad de los Parques" debido a la gran cantidad de áreas verdes que posee. 
+    Santander es famoso por su belleza natural, con paisajes montañosos, ríos y cañones impresionantes. 
+    La región es también conocida por su rica cultura y tradiciones, incluyendo festivales como la Feria de las Flores y la Semana Santa. 
+    Además, Santander es un destino popular para actividades al aire libre como el senderismo, la escalada y el parapente. 
+    La gastronomía santandereana es otro atractivo, con platos típicos como la arepa santandereana, el mute y la hormiga culona.
+    </p>
+    <br>
+    <h2>Sitios Turisticos</h2>
+    <p>
+        Algunos de los sitios turísticos más destacados en Santander incluyen:
+        <ul>
+            <li>Cañón del Chicamocha: Un impresionante cañón que ofrece vistas espectaculares y actividades como el parapente y el senderismo.</li>
+            <img src="images/Chicamocha.jpeg" alt="Chicamocha" width="30%" height="30%">
+            <hr>
+            <li>Parque Nacional del Chicamocha: Un parque temático que combina naturaleza, cultura y aventura, con teleféricos que ofrecen vistas panorámicas del cañón.</li>
+            <img src="images/ParqueC.jpeg" alt="Parque Chicamocha" width="30%" height="30%">
+            <hr>
+            <li>Bucaramanga: La capital del departamento, conocida por sus parques, plazas y arquitectura colonial.</li>
+            <img src="images/Bucaramanga.jpeg" alt="Bucaramanga" width="30%" height="30%">
+            <hr>
+            <li>Barichara: Un pintoresco pueblo colonial considerado uno de los más bellos de Colombia, con calles empedradas y casas de estilo tradicional.</li>
+            <img src="images/Barichara.jpeg" alt="Barichara" width="30%" height="30%">
+            <hr>
+            <li>San Gil: Conocida como la capital de los deportes de aventura en Colombia, ofrece actividades como rafting, espeleología y parapente.</li>
+            <img src="images/SanGil.jpeg" alt="San Gil" width="30%" height="30%">
+        </ul>
+    </p>
+    <br>
+    <h2>Comida Tipica</h2>
+    <p>
+        La gastronomía de Santander es rica y variada, con platos típicos que reflejan la cultura y tradiciones de la región. Algunos de los platos más representativos incluyen:
+        <ul>
+            <li>Arepa Santandereana: Una arepa gruesa y esponjosa, generalmente rellena con queso y a veces con carne o huevo.</li>
+            <img src="images/Arepa.jpeg" alt="Arepa Santandereana" width="30%" height="30%">
+            <hr>
+            <li>Mute: Una sopa espesa hecha con maíz, carne de res, cerdo, yuca, papa y verduras, condimentada con hierbas locales.</li>
+            <img src="images/Mute.jpeg" alt="Mute" width="30%" height="30%">
+            <hr>
+            <li>Hormiga Culona: Un manjar tradicional que consiste en hormigas grandes tostadas, consideradas una delicia en la región.</li>
+            <img src="images/Hormiga.jpeg" alt="Hormiga Culona" width="30%" height="30%">
+            <hr>
+            <li>Cabrito: Carne de cabra preparada de diversas formas, a menudo asada o en guisos.</li>
+            <img src="images/Cabrito.jpeg" alt="Cabrito" width="30%" height="30%">
+            <hr>
+            <li>Posta Negra Cartagenera: Aunque originaria de Cartagena, este plato también es popular en Santander. Consiste en carne de res marinada y cocida en una salsa oscura y dulce.</li>
+            <img src="images/Posta.jpeg" alt="Posta Negra" width="30%" height="30%">
+        </ul>
+    </p>
+    <br>
+    <h2>Informacion poblacional y economica</h2>
+    <p>
+        Santander es un departamento con una población diversa y dinámica. Según datos recientes, la población de Santander es de aproximadamente 2.2 millones de habitantes. 
+        La mayoría de la población se concentra en áreas urbanas, especialmente en la capital, Bucaramanga, que es la ciudad más grande y desarrollada del departamento.
+        La economía de Santander es variada y se basa en varios sectores clave. La agricultura es una actividad importante, con cultivos como café, cacao, tabaco, y frutas tropicales. 
+        La ganadería también juega un papel significativo en la economía local. Además, Santander tiene una industria manufacturera en crecimiento, 
+        con empresas dedicadas a la producción de textiles, alimentos procesados y productos químicos. El turismo es otro sector económico importante, 
+        impulsado por los atractivos naturales y culturales del departamento.
+        En términos de infraestructura, Santander cuenta con una red de carreteras que conecta las principales ciudades y pueblos del departamento, así como con el resto del país. 
+        El Aeropuerto Internacional Palonegro, ubicado cerca de Bucaramanga, facilita el acceso aéreo a la región.
+        En resumen, Santander es un departamento con una población activa y una economía diversificada que combina agricultura, industria y turismo para impulsar su desarrollo.
+    </p>
+    <hr>
+    <img src="images/Estad.jpeg" alt="Estadisticas" width="30%" height="30%">
+    <img src="images/Bandera.jpeg" alt="Bandera" width="30%" height="30%">
+    <br>
+    <a href="index.html" style="padding:10px 20px; background: rgb(42, 160, 2); color:black; border-radius:5px; text-decoration:none;">
+        Volver al mapa
 </body>
 </html>
