feat: :sparkles: Casanare departamento

--- a/casanare.html
+++ b/casanare.html
@@ -3,9 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Casanare</title>
 </head>
 <body>
-    
+    <h1 style="text-align: center;">Bienvenido a Casanare</h1>
+    <center>
+        <img src="images/Casanare.jpeg" alt="Casanare" width="40%" height="40%">
+    </center>
+    <br>
+    <h2>Descripcion</h2>
+    <p style="text-align: justify;">
+        Casanare es un departamento ubicado en la región de los Llanos Orientales de Colombia. 
+        Su capital es Yopal, una ciudad que sirve como centro administrativo y económico de la región. 
+        Casanare es conocido por su vasta extensión de tierras planas, ideales para la ganadería y la agricultura. 
+        La región es rica en recursos naturales, especialmente petróleo, lo que ha impulsado su desarrollo económico en las últimas décadas. 
+        Además, Casanare cuenta con una biodiversidad significativa, con numerosos ríos, lagunas y áreas protegidas que albergan una variedad de flora y fauna. 
+        La cultura llanera es una parte integral de la identidad de Casanare, con tradiciones como la música, la danza y la gastronomía que reflejan la vida en los llanos.
+    </p>
+    <br>
+    <h2>Sitios Turisticos</h2>
+    <p>
+        Algunos de los sitios turísticos más destacados en Casanare incluyen:
+        <ul>
+            <li>Parque Nacional Natural El Tuparro: Una reserva natural que ofrece paisajes impresionantes, vida silvestre y oportunidades para el ecoturismo.</li>
+            <img src="images/Tuparro.jpeg" alt="Tuparro" width="30%" height="30%">
+            <hr>
+            <li>Caño Cristales: Conocido como el "río de los cinco colores", es famoso por su belleza natural y la diversidad de plantas acuáticas que le dan una apariencia única.</li>
+            <img src="images/Cristales.jpeg" alt="Caño Cristales" width="30%" height="30%">
+            <hr>
+            <li>Laguna de la Herrera: Un lugar ideal para la observación de aves y la pesca deportiva.</li>
+            <img src="images/Laguna.jpeg" alt="Laguna de la Herrera" width="30%" height="30%">
+            <hr>
+            <li>Yopal: La capital del departamento, donde se pueden encontrar mercados locales, restaurantes y eventos culturales.</li>
+            <img src="images/Yopal.jpeg" alt="Yopal" width="30%" height="30%">
+            <hr>
+            <li>Hato La Aurora: Una finca típica llanera que ofrece experiencias de turismo rural, incluyendo paseos a caballo y degustación de comida tradicional.</li>
+            <img src="images/Hato.jpeg" alt="Hato La Aurora" width="30%" height="30%">
+        </ul>
+    </p>
+    <br>
+    <h2>Comida Tipica</h2>
+    <p>
+        La gastronomía de Casanare es rica y variada, con platos típicos que reflejan la cultura llanera. Algunos de los platos más representativos incluyen:
+        <ul>
+            <li>Carne a la Llanera: Un plato tradicional que consiste en carne de res asada, generalmente acompañada de yuca, plátano y arepas.</li>
+            <img src="images/Carne.jpeg" alt="Carne a la Llanera" width="30%" height="30%">
+            <hr>
+            <li>Majarete: Un postre hecho a base de maíz, leche, azúcar y canela, que se sirve frío.</li>
+            <img src="images/Majarete.jpeg" alt="Majarete" width="30%" height="30%">
+            <hr>
+            <li>Chigüiro: Carne del roedor más grande del mundo, preparado de diversas formas, como en guisos o asado.</li>
+            <img src="images/Chiguiro.jpeg" alt="Chigüiro" width="30%" height="30%">
+            <hr>
+            <li>Arepa de Chicharrón: Una arepa rellena con chicharrón, que es un plato muy popular en la región.</li>
+            <img src="images/ArepaC.jpeg" alt="Arepa de Chicharrón" width="30%" height="30%">
+            <hr>
+            <li>Sopa de Gallina Criolla: Una sopa tradicional hecha con gallina criolla, verduras y especias.</li>
+            <img src="images/Sopa.jpeg" alt="Sopa de Gallina" width="30%" height="30%">
+        </ul>
+    </p>
+    <br>
+    <h2>Informacion Poblacional y economica</h2>
+    <p style="text-align: justify;">
+        Casanare tiene una población aproximada de 420,000 habitantes. 
+        La economía del departamento está fuertemente influenciada por la industria petrolera, que representa una parte significativa de los ingresos regionales. 
+        Además, la ganadería es una actividad económica clave, con grandes extensiones de tierra dedicadas a la cría de ganado bovino. 
+        La agricultura también juega un papel importante, con cultivos como arroz, maíz y yuca. 
+        En términos de infraestructura, Casanare ha experimentado un crecimiento en los últimos años, con mejoras en las carreteras, servicios públicos y desarrollo urbano, especialmente en la capital, Yopal.
+    </p>
+    <hr>
+    <img src="images/Estad.jpeg" alt="Estadisticas" width="30%" height="30%">
+    <img src="images/BanderaC.jpeg" alt="Bandera" width="30%" height="30%">
+    <br>
+    <a href="index.html" style="padding:10px 20px; background: rgb(42, 160, 2); color:black; border-radius:5px; text-decoration:none;">
+        Volver al mapa
+    </a>
 </body>
 </html>
