--- a/santander.html
+++ b/santander.html
@@ -11,12 +11,13 @@
         <img src="images/Santander.jpeg" alt="Santander" width="40%" height="40%">
     </center>
     <h2>Descripcion</h2>
-    <p style="text-align: justify;">Santander es un departamento ubicado en la región andina de Colombia. 
-    Su capital es Bucaramanga, conocida como la "Ciudad de los Parques" debido a la gran cantidad de áreas verdes que posee. 
-    Santander es famoso por su belleza natural, con paisajes montañosos, ríos y cañones impresionantes. 
-    La región es también conocida por su rica cultura y tradiciones, incluyendo festivales como la Feria de las Flores y la Semana Santa. 
-    Además, Santander es un destino popular para actividades al aire libre como el senderismo, la escalada y el parapente. 
-    La gastronomía santandereana es otro atractivo, con platos típicos como la arepa santandereana, el mute y la hormiga culona.
+    <p style="text-align: justify;">
+        Santander es un departamento ubicado en la región andina de Colombia. 
+        Su capital es Bucaramanga, conocida como la "Ciudad de los Parques" debido a la gran cantidad de áreas verdes que posee. 
+        Santander es famoso por su belleza natural, con paisajes montañosos, ríos y cañones impresionantes. 
+        La región es también conocida por su rica cultura y tradiciones, incluyendo festivales como la Feria de las Flores y la Semana Santa. 
+        Además, Santander es un destino popular para actividades al aire libre como el senderismo, la escalada y el parapente. 
+        La gastronomía santandereana es otro atractivo, con platos típicos como la arepa santandereana, el mute y la hormiga culona.
     </p>
     <br>
     <h2>Sitios Turisticos</h2>
