feat: :sparkles: Departamento Meta

--- a/meta.html
+++ b/meta.html
@@ -3,9 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meta</title>
 </head>
 <body>
-    
+    <h1 style="text-align: center;">Bienvenido a El Meta</h1>
+    <center>
+        <img src="images/Meta.jpeg" alt="Meta" width="40%" height="40%">
+    </center>
+    <br>
+    <h2>Descripcion</h2>
+    <p style="text-align: justify;">
+        El Meta es un departamento ubicado en la región de los Llanos Orientales de Colombia. 
+        Su capital es Villavicencio, una ciudad que sirve como puerta de entrada a la región de los llanos. 
+        El Meta es conocido por su vasta extensión de tierras planas, ideales para la ganadería y la agricultura. 
+        La región es rica en recursos naturales, incluyendo petróleo, lo que ha impulsado su desarrollo económico en las últimas décadas. 
+        Además, el Meta cuenta con una biodiversidad significativa, con numerosos ríos, lagunas y áreas protegidas que albergan una variedad de flora y fauna. 
+        La cultura llanera es una parte integral de la identidad del Meta, con tradiciones como la música, la danza y la gastronomía que reflejan la vida en los llanos.
+    </p>
+    <br>
+    <h2>Sitios Turisticos</h2>
+    <p>
+        Algunos de los sitios turísticos más destacados en el Meta incluyen:
+        <ul>
+            <li>Laguna de Tota: Una laguna de origen glaciar que es un lugar ideal para la observación de aves y la pesca deportiva.</li>
+            <img src="images/Tota.jpeg" alt="Laguna de Tota" width="30%" height="30%">
+            <hr>
+            <li>Villavicencio: La capital del departamento, donde se pueden encontrar mercados locales, restaurantes y eventos culturales.</li>
+            <img src="images/Villavicencio.jpeg" alt="Villavicencio" width="30%" height="30%">
+            <hr>
+            <li>Parque Los Ocarros: Un parque zoológico ubicado en Villavicencio que alberga una variedad de animales nativos de la región.</li>
+            <img src="images/Ocarros.jpeg" alt="Parque Los Ocarros" width="30%" height="30%">
+            <hr>
+            <li>Parque los fundadores: Es un parque bonito tiene zona para comer y monumentos historicos, tiene muy buenas vistas y tiene una cascada muy buena</li>
+            <img src="images/Fundadores.jpeg" alt="Parque los fundadores" width="30%" height="30%">
+            <hr>
+            <li>Alto de menegua: Se puede ver de forma panorámica el llano desde el balcón del alto y desde la cima de la torre, muy bueno para ver el atardecer</li>
+            <img src="images/Menegua.jpeg" alt="Alto de menegua" width="30%" height="30%">
+        </ul>
+    </p>
+    <br>
+    <h2>Comida Tipica</h2>
+    <p>
+        La gastronomía del Meta es rica y variada, con platos típicos que reflejan la cultura llanera. Algunos de los platos más representativos incluyen: 
+        <ul>
+            <li>Carne a la Llanera: Un plato tradicional que consiste en carne de res asada al estilo llanero, generalmente acompañada de yuca, plátano y arroz.</li>
+            <img src="images/Carne.jpeg" alt="Carne a la Llanera" width="30%" height="30%">
+            <hr>
+            <li>Arepa Llanera: Una arepa hecha con maíz pilado, que se sirve como acompañamiento en muchas comidas.</li>
+            <img src="images/Arepa.jpeg" alt="Arepa Llanera" width="30%" height="30%">
+            <hr>
+            <li>Sopa de Gallina Criolla: Una sopa tradicional hecha con gallina criolla, verduras y especias, ideal para los días fríos.</li>
+            <img src="images/Sopa.jpeg" alt="Sopa de Gallina Criolla" width="30%" height="30%">
+            <hr>
+            <li>Chigüiro: Un plato hecho con carne de chigüiro (capibara), que es un animal nativo de la región. Se prepara de diversas formas, incluyendo asado o en guisos.</li>
+            <img src="images/Chiguiro.jpeg" alt="Chigüiro" width="30%" height="30%">
+            <hr>
+            <li>Majarete: Un postre hecho a base de maíz, leche, azúcar y canela, que se sirve frío.</li>
+            <img src="images/Majarete.jpeg" alt="Majarete" width="30%" height="30%">
+        </ul>
+    </p>
+    <br>
+    <h2>Informacion poblacional y economica</h2>
+    <p style="text-align: justify;">
+        El departamento del Meta tiene una población aproximada de 1 millón de habitantes, según datos recientes. 
+        La mayoría de la población se concentra en la capital, Villavicencio, y en otras ciudades importantes como Acacías, Granada y Puerto López. 
+        La economía del Meta está diversificada, con sectores clave que incluyen la agricultura, la ganadería, la explotación petrolera y el turismo. 
+        La región es un importante productor de carne y productos agrícolas, y la industria petrolera ha contribuido significativamente al desarrollo económico del departamento. 
+        Además, el turismo ha crecido en los últimos años, impulsado por la belleza natural de la región y su cultura llanera.
+    </p>
+    <img src="images/Estad.jpeg" alt="Estadisticas" width="30%" height="30%">
+    <img src="images/MetaBand.jpeg" alt="Bandera del Meta" width="30%" height="30%">
+    <br>
+    <a href="index.html" style="padding:10px 20px; background: rgb(42, 160, 2); color:black; border-radius:5px; text-decoration:none;">
+        Volver al mapa
 </body>
 </html>
